Updates for Labs 3,4 and 5
Labs 3 and 4 are tested and functioning. Lab 5 needs to be overhauled to comply with new Pubsub best practices and styles.

--- a/developingapps_v1.2/nodejs/firebase/end/server/public/client/index.html
+++ b/developingapps_v1.2/nodejs/firebase/end/server/public/client/index.html
@@ -35,10 +35,10 @@
 
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
     <script>
-        // Initialize Firebase - THIS WILL WORK FOR NOW
-        // BUT I WILL BE REMOVING IT BEFORE IT GOES LIVE
+        // Code is for indicative purposes only
+        // logins will fail as the url and apiKey are invalid
         var config = {
-            apiKey: 'AIzaSyDFiWY2NGU2WB7pBamLCBjF43OvvpVUTIE',
+            apiKey: 'aabbccddeeff00112233445566778899aabbcc',
             authDomain: 'gdev2-na.firebaseapp.com',
             databaseURL: 'https://gdev2-na.firebaseio.com',
             projectId: 'gdev2-na',
